Updated vietnam trip, added bintan trip

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -30,27 +30,25 @@
 -   Bus/ Transport to Phong Nha/ Hotel  
     _Maybe our accommodation can pick us up_
 -   Cycling/ Visit Phong Nha Cave
--   Overnight at [Phong Nha Farmstay/Homestay][phong-nha-homestay]
-    -   [ ] $28 Funny Monkey - Mountain/River View
-    -   [ ] $30 Coco River - Mountain/River View
+-   Overnight at [Son River Homestay][son-river-homestay]
 
 **16 Nov**
 
--   0700 $350 [HT2 Hang Tien Endeavor D1][ht2]
+-   0700 SGD $122 [HT1 Hang Tien Discovery][ht1]
+-   2130 [8hr] $33 [Bus to Ninh Bin](https://www.bookaway.com/s/vietnam/phong-nha-ke-bang-national-park-to-ninh-binh?offer_id=34&aff_id=1197) _subject to availability_
+-   Overnight in bus
 
 **17 Nov**
 
--   [HT2 Hang Tien Endeavor D2][ht2]
--   1900 Return to Phong Nha
--   2130 [8hr] $33 [Bus to Ninh Bin](https://www.bookaway.com/s/vietnam/phong-nha-ke-bang-national-park-to-ninh-binh?offer_id=34&aff_id=1197 _subject to availability_
+-   0600 Arrive Ninh Bin
+-   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua]
+-   Overnight in Ninh Bin
 
 **18 Nov**
 
--   0600 Arrive Ninh Bin
--   Explore Ninh Bin
 -   1200 \[2hr\] Bus to Hanoi
--   Hotel/R&R/Fattening/Night market/Spa
--   [Overnight at Hanoi][hanoi-hotels]
+-   R&R/Fattening/Night market/Spa
+-   Overnight at [La Passion Hotel & Spa][la-passion-hotel]
 
 **19 Nov**
 
@@ -108,3 +106,7 @@
 [sap-hotel]: https://www.booking.com/hotel/vn/essence-palace.html?aid=356980&label=gog235jc-1DCAMooQFCC2pvaG9yLWJhaHJ1SDNYA2jJAYgBAZgBMbgBF8gBD9gBA-gBAfgBAogCAagCA7gCqpqimAbAAgHSAiQ3ODMzYWYyZC01N2E0LTQ2YmEtOWNmYy0yNjYwMjhmNDE4ZTnYAgTgAgE&sid=9b41df95f3c7ee83d4fe37873ebca795&all_sr_blocks=111970635_348599926_0_10_0;checkin=2022-11-13;checkout=2022-11-14;dest_id=2096;dest_type=district;dist=0;group_adults=2;group_children=0;hapos=4;highlighted_blocks=111970635_348599926_0_10_0;hpos=4;matching_block_id=111970635_348599926_0_10_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=111970635_348599926_0_10_0__70012800;srepoch=1661740685;srpvid=d4601285d8590018;type=total;ucfs=1&#map_closed
 [to-hanoi]: https://12go.asia/en/travel/phong-nha/hanoi?date=2022-11-17&people=2&direction=forward
 [to-phong-nha]: https://12go.asia/en/travel/hanoi/dong-hoi?date=2022-11-14&people=2&direction=forward
+[ht1]: https://oxalisadventure.com/tour/hang-tien-1-day-discovery/
+[hang-mua]: https://dailytravelpill.com/mua-cave-view-to-remember-ninh-binh-province/
+[son-river-homestay]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2647805289&pincode=1911
+[la-passion-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=3569571980&pincode=5177
