Added tam coc hotel

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -42,7 +42,7 @@
 
 -   0600 Arrive Ninh Bin
 -   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua]
--   Overnight in Ninh Bin
+-   Overnight in [Tam Coc Holiday Hotel & Villa][tam-coc-hotel]
 
 **18 Nov**
 
@@ -110,3 +110,4 @@
 [hang-mua]: https://dailytravelpill.com/mua-cave-view-to-remember-ninh-binh-province/
 [son-river-homestay]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2647805289&pincode=1911
 [la-passion-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=3569571980&pincode=5177
+[tam-coc-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2488056188&pincode=8239
