Updated bintan trip, vietnam trip

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -10,43 +10,41 @@
 -   1140am Arrive in Hanoi
 -   1300 \[45min\] [Bus 86 or airport shuttle][airport-transfer] to Old Quarter
 -   Explore 36 ancient streets, Sword Lake, Night market
--   Overnight at Hanoi
-    -   [ ] $46 [Sạp Hotel by Connek][sap-hotel] or
-    -   [ ] $55 [Babylon Premium Hotel & Spa][babylon] or
-    -   [ ] [So many options][hanoi-hotels]
+-   Overnight at [Hanoi Amorita Boutique Hotel & Travel][hanoi-amorita]
 
 **14 Nov**
 
 -   0830 Halong Bay Day Trip
-    -   [ ] $59 [Route 2: Sung Sot Cave, Kayak/boatat Luong Cave, Swim/trek at Titop Island](https://www.klook.com/en-SG/activity/27812-ha-long-bay-day-tour-hanoi/?spm=Experience_SubVertical.Activity_LIST&clickId=fa825a4048)
--   2030 Return to Old Quarter  
-    _no shower before taking overnight train_
--   2215 \[10hr\] $90?? [Train to Dong Hoi][to-phong-nha]  
-    _Flight is $50?? Hopefully the train price drops as the date goes closer. The trains/bus seems scary from what read from the reviews - there could be roaches but maybe after covid, they have cleaned it :D Accoms are really cheap so im wondering if we are saving by taking the uncomfortable overnight bus/train mm oh well but it seems like to get to anywhere from Hanoi is at least 5 hours_
+    -   [x] $59 [Route 2: Sung Sot Cave, Kayak/boatat Luong Cave, Swim/trek at Titop Island][halong-bay-tour] \([Ticket][halong-bay-ticket]\)
+-   2030 Return to Old Quarter
+    -   _no shower before taking overnight train_
+-   [ ] 2215 \[10hr\] [Train to Dong Hoi][to-phong-nha] $55pp (1st Class Sleeper, 4 beds per cabin)
+    -   I'm currently checking with the hotel if there is alternative transport they can provide.
 
 **15 Nov**
 
 -   0800 Arrive in Dong Hoi, [Morning Market](https://itsadrama.com/hanoi-to-phong-nha-how-to-do-it/)
--   Bus/ Transport to Phong Nha/ Hotel  
-    _Maybe our accommodation can pick us up_
+-   Bus to Phong Nha/Hotel
+    -   [Regular bus][dong-hoi-to-phong-nha-bus] is available.
+    -   _Maybe our accommodation can pick us up_
 -   Cycling/ Visit Phong Nha Cave
 -   Overnight at [Son River Homestay][son-river-homestay]
 
 **16 Nov**
 
--   0700 SGD $122 [HT1 Hang Tien Discovery][ht1]
--   2130 [8hr] $33 [Bus to Ninh Bin](https://www.bookaway.com/s/vietnam/phong-nha-ke-bang-national-park-to-ninh-binh?offer_id=34&aff_id=1197) _subject to availability_
+-   [ ] 0700 SGD $122 [HT1 Hang Tien Discovery][ht1]
+-   [ ] 2130 [8hr] $33 [Bus to Ninh Bin](https://www.bookaway.com/s/vietnam/phong-nha-ke-bang-national-park-to-ninh-binh?offer_id=34&aff_id=1197) _subject to availability_
 -   Overnight in bus
 
 **17 Nov**
 
 -   0600 Arrive Ninh Bin
--   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua]
+-   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua], rent bicycles
 -   Overnight in [Tam Coc Holiday Hotel & Villa][tam-coc-hotel]
 
 **18 Nov**
 
--   1200 \[2hr\] Bus to Hanoi
+-   1200 \[2hr\] Bus/Train to Hanoi
 -   R&R/Fattening/Night market/Spa
 -   Overnight at [La Passion Hotel & Spa][la-passion-hotel]
 
@@ -111,3 +109,7 @@
 [son-river-homestay]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2647805289&pincode=1911
 [la-passion-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=3569571980&pincode=5177
 [tam-coc-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2488056188&pincode=8239
+[hanoi-amorita]: https://www.booking.com/hotel/vn/hanoi-royal-view.html?
+[halong-bay-ticket]: ../static/2022-08-22/halong-bay.pdf
+[halong-bay-tour]: https://www.klook.com/en-SG/activity/27812-ha-long-bay-day-tour-hanoi/?spm=Experience_SubVertical.Activity_LIST&clickId=fa825a4048
+[dong-hoi-to-phong-nha-bus]: https://www.visitphongnha.com/plan-your-visit/getting-here/dong-hoi/
