Added pizza place

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -10,6 +10,7 @@
 -   1140am Arrive in Hanoi
 -   1300 \[45min\] [Bus 86 or airport shuttle][airport-transfer] to Old Quarter
 -   Explore 36 ancient streets, Sword Lake, Night market
+-   Try [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
 -   Overnight at [Hanoi Amorita Boutique Hotel & Travel][hanoi-amorita]
 
 **14 Nov**
