Updated bintan trip costs and photo

--- a/docs/posts/2022-09-15-bintan.md
+++ b/docs/posts/2022-09-15-bintan.md
@@ -1,4 +1,4 @@
-# Bintan Trip 24-25 Oct 2022
+# Bintan Trip 23-25 Oct 2022
 
 ![](/static/2022-09-15/bintan.jpg)
 
@@ -61,6 +61,15 @@ From Bintan:
 -   Fri-Sun: 1105, 1405, 1605
 
 The round trip ferry cost is $95. We do not need a [visa][visa].
+
+## Cost of the trip
+
+-   Ferry: $100 return per person
+-   Accomodation: $89 for 2 nights
+-   Transport to/from airport: $55
+-   Food: $42 (resort) + $55 (seafood restaurant) = $97
+
+Total cost per person: $100 + $(89 + 55 + 97)/2 = **$220.50**
 
 [trc-bintan-resort]: https://www.booking.com/hotel/id/trc-bintan-resort.html
 [trc-supermarket]: https://goo.gl/maps/r4mZooe8yZqSrMT36
