Updated vietnam itinerary

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -8,46 +8,44 @@
 
 -   910am Flight to Hanoi
 -   1140am Arrive in Hanoi
--   1300 \[45min\] [Bus 86 or airport shuttle][airport-transfer] to Old Quarter
--   Explore 36 ancient streets, Sword Lake, Night market
--   Try [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
--   Overnight at [Hanoi Amorita Boutique Hotel & Travel][hanoi-amorita]
+-   [ ] Flight to Dong Hoi
+-   \[90 min\] [Local bus to Phong Nha (hourly)][dong-hoi-to-phong-nha-bus]
+-   [ ] Overnight at [Son River Homestay][son-river-homestay]
 
 **14 Nov**
 
--   0830 Halong Bay Day Trip
-    -   [x] $59 [Route 2: Sung Sot Cave, Kayak/boatat Luong Cave, Swim/trek at Titop Island][halong-bay-tour] \([Ticket][halong-bay-ticket]\)
--   2030 Return to Old Quarter
-    -   _no shower before taking overnight train_
--   [ ] 2215 \[10hr\] [Train to Dong Hoi][to-phong-nha] $55pp (1st Class Sleeper, 4 beds per cabin)
-    -   I'm currently checking with the hotel if there is alternative transport they can provide.
+-   Cycling/Visit Phong Nha Cave [(other options)][phong-nha-things-todo]
+-   [ ] Go to [Central Backpackers Hostel][central-backpackers-hostel] to pay for the bus?
+-   Overnight at [Son River Homestay][son-river-homestay]
 
 **15 Nov**
 
--   0800 Arrive in Dong Hoi, [Morning Market](https://itsadrama.com/hanoi-to-phong-nha-how-to-do-it/)
--   Bus to Phong Nha/Hotel
-    -   [Regular bus][dong-hoi-to-phong-nha-bus] is available.
-    -   _Maybe our accommodation can pick us up_
--   Cycling/ Visit Phong Nha Cave
--   Overnight at [Son River Homestay][son-river-homestay]
+-   0700 [HT1 Hang Tien Discovery][ht1]
+-   2130 Overnight bus to Ninh Bin ([Central Backpackers Hostel][central-backpackers-hostel], 30min from Son River Homestay)
 
 **16 Nov**
 
--   [ ] 0700 SGD $122 [HT1 Hang Tien Discovery][ht1]
--   [ ] 2130 [8hr] $33 [Bus to Ninh Bin](https://www.bookaway.com/s/vietnam/phong-nha-ke-bang-national-park-to-ninh-binh?offer_id=34&aff_id=1197) _subject to availability_
--   Overnight in bus
+-   0400 Arrive Ninh Bin
+-   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua], rent bicycles
+-   [ ] **Search for river cruise option, otherwise book on Klook**
+-   [Train (2.5hr) /Limo van (1.5hr)][ninhbin-to-hanoi] to Hanoi (bus not recommended)
+-   [ ] Overnight in Hanoi
 
 **17 Nov**
 
--   0600 Arrive Ninh Bin
--   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua], rent bicycles
--   Overnight in [Tam Coc Holiday Hotel & Villa][tam-coc-hotel]
+-   ~0800 River cruise (possibly hotel pickup)
+-   Kayak/swimming/explore Cat Ba island
+-   Overnight in cruise
 
 **18 Nov**
 
--   1200 \[2hr\] Bus/Train to Hanoi
+-   Morning in cruise
+-   ~1200 Back in Hanoi
+-   ~1300 Head to Old Quarter
+-   Explore 36 ancient streets, Sword Lake, Night market
 -   R&R/Fattening/Night market/Spa
--   Overnight at [La Passion Hotel & Spa][la-passion-hotel]
+-   Try [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
+-   [ ] Overnight at [La Passion Hotel & Spa][la-passion-hotel]
 
 **19 Nov**
 
@@ -83,7 +81,7 @@
     -   XÔI RÁN HÀNG ĐIẾU (Fried Sticky Rice)
     -   Egg Coffee Giảng
 
-## Todo
+## To prepare before trip
 
 **Medical**
 
@@ -95,6 +93,7 @@
 **Miscellaneous**
 
 -   Buy/activate SIM cards/data roaming prior
+-   Travel insurance
 
 [airport-transfer]: https://www.bestpricetravel.com/travel-guide/bus-from-hanoi-airport-to-old-quarter-2642.html
 [babylon]: https://www.booking.com/hotel/vn/babylon-premium-amp-spa.html?label=gog235jc-1DCAMooQFCC2pvaG9yLWJhaHJ1SDNYA2jJAYgBAZgBMbgBF8gBD9gBA-gBAfgBAogCAagCA7gCqpqimAbAAgHSAiQ3ODMzYWYyZC01N2E0LTQ2YmEtOWNmYy0yNjYwMjhmNDE4ZTnYAgTgAgE&sid=9b41df95f3c7ee83d4fe37873ebca795&aid=356980&ucfs=1&arphpl=1&checkin=2022-11-13&checkout=2022-11-14&dest_id=2096&dest_type=district&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=5&hapos=5&sr_order=popularity&srpvid=d4601285d8590018&srepoch=1661740685&all_sr_blocks=517400501_354375041_0_1_0&highlighted_blocks=517400501_354375041_0_1_0&matching_block_id=517400501_354375041_0_1_0&sr_pri_blocks=517400501_354375041_0_1_0__93372700&from_sustainable_property_sr=1&from=searchresults#hotelTmpl
@@ -107,10 +106,13 @@
 [to-phong-nha]: https://12go.asia/en/travel/hanoi/dong-hoi?date=2022-11-14&people=2&direction=forward
 [ht1]: https://oxalisadventure.com/tour/hang-tien-1-day-discovery/
 [hang-mua]: https://dailytravelpill.com/mua-cave-view-to-remember-ninh-binh-province/
-[son-river-homestay]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2647805289&pincode=1911
+[son-river-homestay]: https://secure.booking.com/confirmation.html?aid=304142&label=gen173bo-1DCAEoggI46AdIM1gDaMkBiAEBmAExuAEZyAEP2AED6AEB-AEDiAIBmAIhqAIDuALFjISbBsACAdICJDJiNzNjZTk2LThkNGQtNGRiZS05OTgxLWE5YWZlMGIyMjFlMtgCBOACAQ&sid=0d7051f0b96730b2bc115a21606d5869&auth_key=0QRMHwMvRervm4hl&bp_travel_purpose=leisure&ges=148148.148148148&hostname=www.booking.com&rt_num_blocks=5&source=book&srpvid=f957526f2f950205&ua_created=0&
 [la-passion-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=3569571980&pincode=5177
 [tam-coc-hotel]: https://secure.booking.com/myreservations.html?pbsource=booking_confirmation&bn=2488056188&pincode=8239
 [hanoi-amorita]: https://www.booking.com/hotel/vn/hanoi-royal-view.html?
 [halong-bay-ticket]: ../static/2022-08-22/halong-bay.pdf
 [halong-bay-tour]: https://www.klook.com/en-SG/activity/27812-ha-long-bay-day-tour-hanoi/?spm=Experience_SubVertical.Activity_LIST&clickId=fa825a4048
 [dong-hoi-to-phong-nha-bus]: https://www.visitphongnha.com/plan-your-visit/getting-here/dong-hoi/
+[central-backpackers-hostel]: https://goo.gl/maps/quDAvQ9Z5youMJai7
+[ninhbin-to-hanoi]: https://www.geckoroutes.com/vietnam/ninh-binh-to-hanoi/
+[phong-nha-things-todo]: https://vietnam.travel/things-to-do/complete-guide-phong-nha
