--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -4,40 +4,41 @@
 
 ## Itinerary
 
-**13 Nov**
+**13 Nov, Sun**
 
--   910am Flight to Hanoi
--   1140am Arrive in Hanoi
--   [ ] Flight to Dong Hoi
--   \[90 min\] [Local bus to Phong Nha (hourly)][dong-hoi-to-phong-nha-bus]
--   [ ] Overnight at [Son River Homestay][son-river-homestay]
+-   0910 [Flight][sg-to-hanoi] to Hanoi (Changi Airport T1, 3hr 30min)
+-   1140 Arrive in Hanoi, Noi Bai Intl T2
+-   1355 [Flight][hanoi-to-dong-hoi] to Dong Hoi (T1, 1hr 5min)
+-   1500 Arrive in Dong Hoi
+-   [Take local bus to Phong Nha (hourly, 90min)][dong-hoi-to-phong-nha-bus]
+-   Overnight at [Son River Homestay][son-river-homestay]
 
-**14 Nov**
+**14 Nov, Mon**
 
 -   Cycling/Visit Phong Nha Cave [(other options)][phong-nha-things-todo]
 -   [ ] Go to [Central Backpackers Hostel][central-backpackers-hostel] to pay for the bus?
 -   Overnight at [Son River Homestay][son-river-homestay]
 
-**15 Nov**
+**15 Nov, Tue**
 
 -   0700 [HT1 Hang Tien Discovery][ht1]
 -   2130 Overnight bus to Ninh Bin ([Central Backpackers Hostel][central-backpackers-hostel], 30min from Son River Homestay)
 
-**16 Nov**
+**16 Nov, Wed**
 
 -   0400 Arrive Ninh Bin
 -   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua], rent bicycles
 -   [ ] **Search for river cruise option, otherwise book on Klook**
 -   [Train (2.5hr) /Limo van (1.5hr)][ninhbin-to-hanoi] to Hanoi (bus not recommended)
--   [ ] Overnight in Hanoi
+-   [ ] Overnight in Hanoi/Ninh bin depending on whether cruise provides transport
 
-**17 Nov**
+**17 Nov, Thu**
 
--   ~0800 River cruise (possibly hotel pickup)
+-   Morning: River cruise (possibly hotel pickup)
 -   Kayak/swimming/explore Cat Ba island
 -   Overnight in cruise
 
-**18 Nov**
+**18 Nov, Fri**
 
 -   Morning in cruise
 -   ~1200 Back in Hanoi
@@ -45,12 +46,41 @@
 -   Explore 36 ancient streets, Sword Lake, Night market
 -   R&R/Fattening/Night market/Spa
 -   Try [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
--   [ ] Overnight at [La Passion Hotel & Spa][la-passion-hotel]
+-   Overnight at [La Passion Hotel & Spa, Hanoi][la-passion-hotel]
 
-**19 Nov**
+**19 Nov, Sat**
 
--   0900 \[45min\] [Bus 86 or airport shuttle][airport-transfer] to Airport
--   1130am Flight to Singapore
+-   0900 [Bus 86 or airport shuttle][airport-transfer] to Airport (45min)
+-   1130 [Flight][sg-to-hanoi] to Singapore (Noi Bai Intl T2)
+-   1545 Arrive in Singapore (Changi Airport T1)
+
+## Food to eat
+
+-   Hanoi [nomnoms 1](https://www.youtube.com/watch?v=T0gwaAP5k9Y) and [nomnoms 2](https://www.youtube.com/watch?v=GL3mfWvsF24):
+    -   Bánh cuốn Yên Phụ (Steamed rice rolls)
+    -   Bún riêu Hồng Phúc (Crab cake rice noodle)
+    -   BÚN ỐC GIANG (Snail Noodles)
+    -   BÁNH MÌ 25 (Bánh mì)
+    -   BÚN ĐẬU MẸT (Vermicelli noodles with tofu and rice pork cake with shrimp paste)
+    -   XÔI RÁN HÀNG ĐIẾU (Fried Sticky Rice)
+    -   Egg Coffee Giảng
+
+## To prepare before trip
+
+**Medical**
+
+-   Charcoal
+-   Azithromycin 1g once dose
+-   Oral Rehydration Salts
+-   Paracetamol
+-   Smecta
+-   KIV Loperamide
+
+**Miscellaneous**
+
+-   [ ] Buy/activate SIM cards/data roaming prior
+-   [ ] Change money
+-   [ ] Travel insurance
 
 ## Options
 
@@ -69,31 +99,6 @@
 [HT2 Hang Tien Endeavor][ht2] is available from 16-17 Nov for SGD $348 pp, and appears to provide better night sky views than [TL2 Cave Encounter](https://oxalisadventure.com/tour/tu-lan-cave-encounter/).
 
 [Guide][phong-nha-travel] for getting to Phong Nha.
-
-## Food to eat
-
--   Hanoi [nomnoms 1](https://www.youtube.com/watch?v=T0gwaAP5k9Y) and [nomnoms 2](https://www.youtube.com/watch?v=GL3mfWvsF24):
-    -   Bánh cuốn Yên Phụ (Steamed rice rolls)
-    -   Bún riêu Hồng Phúc (Crab cake rice noodle)
-    -   BÚN ỐC GIANG (Snail Noodles)
-    -   BÁNH MÌ 25 (Bánh mì)
-    -   BÚN ĐẬU MẸT (Vermicelli noodles with tofu and rice pork cake with shrimp paste)
-    -   XÔI RÁN HÀNG ĐIẾU (Fried Sticky Rice)
-    -   Egg Coffee Giảng
-
-## To prepare before trip
-
-**Medical**
-
--   Charcoal
--   Antibiotics (to check)
--   Oral Rehydration Salts
--   Paracetamol
-
-**Miscellaneous**
-
--   Buy/activate SIM cards/data roaming prior
--   Travel insurance
 
 [airport-transfer]: https://www.bestpricetravel.com/travel-guide/bus-from-hanoi-airport-to-old-quarter-2642.html
 [babylon]: https://www.booking.com/hotel/vn/babylon-premium-amp-spa.html?label=gog235jc-1DCAMooQFCC2pvaG9yLWJhaHJ1SDNYA2jJAYgBAZgBMbgBF8gBD9gBA-gBAfgBAogCAagCA7gCqpqimAbAAgHSAiQ3ODMzYWYyZC01N2E0LTQ2YmEtOWNmYy0yNjYwMjhmNDE4ZTnYAgTgAgE&sid=9b41df95f3c7ee83d4fe37873ebca795&aid=356980&ucfs=1&arphpl=1&checkin=2022-11-13&checkout=2022-11-14&dest_id=2096&dest_type=district&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=5&hapos=5&sr_order=popularity&srpvid=d4601285d8590018&srepoch=1661740685&all_sr_blocks=517400501_354375041_0_1_0&highlighted_blocks=517400501_354375041_0_1_0&matching_block_id=517400501_354375041_0_1_0&sr_pri_blocks=517400501_354375041_0_1_0__93372700&from_sustainable_property_sr=1&from=searchresults#hotelTmpl
@@ -116,3 +121,5 @@
 [central-backpackers-hostel]: https://goo.gl/maps/quDAvQ9Z5youMJai7
 [ninhbin-to-hanoi]: https://www.geckoroutes.com/vietnam/ninh-binh-to-hanoi/
 [phong-nha-things-todo]: https://vietnam.travel/things-to-do/complete-guide-phong-nha
+[sg-to-hanoi]: ../static/2022-08-22/sg-to-hanoi.pdf
+[hanoi-to-dong-hoi]: ../static/2022-08-22/hanoi-to-dong-hoi.pdf
