Updated bintan & vietnam itinerary

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -8,53 +8,73 @@
 
 -   0910 [Flight][sg-to-hanoi] to Hanoi (Changi Airport T1, 3hr 30min)
 -   1140 Arrive in Hanoi, Noi Bai Intl T2
+-   We had delicious banh mi and pho and tough dough fritters at Nicholas' impulse.
 -   1355 [Flight][hanoi-to-dong-hoi] to Dong Hoi (T1, 1hr 5min)
 -   1500 Arrive in Dong Hoi
--   [Take local bus to Phong Nha (hourly, 90min)][dong-hoi-to-phong-nha-bus]
+-   Arranged for pick up transport to our homestay. Alternatively, we could [take local bus to Phong Nha (hourly, 90min)][dong-hoi-to-phong-nha-bus]
 -   Overnight at [Son River Homestay][son-river-homestay]
 
 **14 Nov, Mon**
 
--   Cycling/Visit Phong Nha Cave [(other options)][phong-nha-things-todo]
--   [ ] Go to [Central Backpackers Hostel][central-backpackers-hostel] to pay for the bus?
+-   Breakfast at Hotel
+-   We cycled to the town area and got on a boat tour to Phong Nha Cave [(other options)][phong-nha-things-todo]
+-   We were sold VIP overnight bus ticket on our way to [Central Backpackers Hostel][central-backpackers-hostel] to pay for the original bus booked.
+-   Deliberated and walked many rounds before settling on a automatic motorbike.
+-   Rode along the river and countryside before doing a quick tour of the Phong Nha Botanic gardens.
 -   Overnight at [Son River Homestay][son-river-homestay]
 
 **15 Nov, Tue**
 
 -   0700 [HT1 Hang Tien Discovery][ht1]
+-   2000 Returned the key to the homestay and had a rushed dinner at the vegan restaurant during a heavy downpour.
+-   Nicholas negotiated for a twin motorbike transport to the bus pick up area.
 -   2130 Overnight bus to Ninh Bin ([Central Backpackers Hostel][central-backpackers-hostel], 30min from Son River Homestay)
 
 **16 Nov, Wed**
 
 -   0400 Arrive Ninh Bin
--   Explore Ninh Bin, climb [Hang Mua Peak][hang-mua], rent bicycles
--   [ ] **Search for river cruise option, otherwise book on Klook**
--   [Train (2.5hr) /Limo van (1.5hr)][ninhbin-to-hanoi] to Hanoi (bus not recommended)
--   [ ] Overnight in Hanoi/Ninh bin depending on whether cruise provides transport
+-   Rented another motorbike to explore Bai Dinh Pagoda and climb [Hang Mua Peak][hang-mua] for a sunset view of Tam Coc valley
+-   Overnight at Tam Coc Condeluz Boutique hotel
 
 **17 Nov, Thu**
 
--   Morning: River cruise (possibly hotel pickup)
--   Kayak/swimming/explore Cat Ba island
+-   Breakfast at hotel
+-   Transported to Tuan Chua harbour for the Halong Bay Cruise
+-   Lunch on cruise
+-   Kayaked at halong bay and was late for the sunset such that the cruise had departed and the small boat was looking for us
 -   Overnight in cruise
 
 **18 Nov, Fri**
 
--   Morning in cruise
--   ~1200 Back in Hanoi
--   ~1300 Head to Old Quarter
--   Explore 36 ancient streets, Sword Lake, Night market
--   R&R/Fattening/Night market/Spa
--   Try [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
+-   Breakfast in cruise
+-   Visited the Dark and Light cave on a bamboo boat
+-   Brunch on cruise before we were transported to Hanoi Old Quarter
+-   1530 Arrived and checked in at hotel
+-   Fattening/Night market/Spa
+-   Tried [Pizza 4P](https://g.page/pizza4psbaokhanh?share)
 -   Overnight at [La Passion Hotel & Spa, Hanoi][la-passion-hotel]
 
 **19 Nov, Sat**
 
--   0900 [Bus 86 or airport shuttle][airport-transfer] to Airport (45min)
+-   0800 Morning egg coffee and cocoa at Cafe Giang
+-   0900 Booked a taxi on booking.com to airport. Alternatively, [Bus 86 or airport shuttle][airport-transfer] to Airport (45min)
 -   1130 [Flight][sg-to-hanoi] to Singapore (Noi Bai Intl T2)
 -   1545 Arrive in Singapore (Changi Airport T1)
 
-## Food to eat
+## Misc
+
+-   Medical
+    -   Charcoal
+    -   Azithromycin 1g once dose
+    -   Oral Rehydration Salts
+    -   Paracetamol
+    -   Smecta
+    -   KIV Loperamide
+-   Buy/activate SIM cards/data roaming prior
+-   Change money
+-   Travel insurance
+
+### Food to eat
 
 -   Hanoi [nomnoms 1](https://www.youtube.com/watch?v=T0gwaAP5k9Y) and [nomnoms 2](https://www.youtube.com/watch?v=GL3mfWvsF24):
     -   Bánh cuốn Yên Phụ (Steamed rice rolls)
@@ -65,24 +85,30 @@
     -   XÔI RÁN HÀNG ĐIẾU (Fried Sticky Rice)
     -   Egg Coffee Giảng
 
-## To prepare before trip
+### Caving Notes
 
-**Medical**
+[HT2 Hang Tien Endeavor][ht2] is available from 16-17 Nov for SGD $348 pp, and appears to provide better night sky views than [TL2 Cave Encounter](https://oxalisadventure.com/tour/tu-lan-cave-encounter/).
 
--   Charcoal
--   Azithromycin 1g once dose
--   Oral Rehydration Salts
--   Paracetamol
--   Smecta
--   KIV Loperamide
+[Guide][phong-nha-travel] for getting to Phong Nha.
 
-**Miscellaneous**
+### Total Costs
 
--   [ ] Buy/activate SIM cards/data roaming prior
--   [ ] Change money
--   [ ] Travel insurance
+-   Accommodation, Food & Domestic Transport: SGD 1051.44
+-   International Flight by Scoot: SGD 455.9
+-   Oxalis [HT2 Hang Tien Endeavor][ht2]: SGD 248.21
+-   Insurance: SGD 73.2
+-   SIM cards: SGD 18.4
 
-## Options
+Approximate total cost per person: SGD 1847.15/2 = SGD 923.58
+
+### Learning Points
+
+1. Almost all the accommodations and shops charge a 3% fee for card transactions. We should change more cash.
+2. Most tours and transportation can be booked in Vietnam.
+3. Shops open very early in Vietnam.
+4. Riding a motorbike is a convenient and cheap form of transportation in the countryside of Vietnam. On average, it costs 150,000 VND/day.
+
+### Options
 
 -   Halong Bay night cruise
 -   [Ninh Binh](https://www.thecrazytourist.com/25-best-things-to-do-in-ninh-binh-vietnam/)
@@ -93,12 +119,7 @@
 -   [Phong Nha camping](https://thesmartlocal.com/vietnam/camping-sites)
 -   [Camping places](https://www.holidify.com/pages/camping-in-vietnam-2730.html)
 -   Spa/Massage
-
-## Caving Notes
-
-[HT2 Hang Tien Endeavor][ht2] is available from 16-17 Nov for SGD $348 pp, and appears to provide better night sky views than [TL2 Cave Encounter](https://oxalisadventure.com/tour/tu-lan-cave-encounter/).
-
-[Guide][phong-nha-travel] for getting to Phong Nha.
+-   [Train (2.5hr) /Limo van (1.5hr)][ninhbin-to-hanoi] Ninh Binh to Hanoi (bus not recommended)
 
 [airport-transfer]: https://www.bestpricetravel.com/travel-guide/bus-from-hanoi-airport-to-old-quarter-2642.html
 [babylon]: https://www.booking.com/hotel/vn/babylon-premium-amp-spa.html?label=gog235jc-1DCAMooQFCC2pvaG9yLWJhaHJ1SDNYA2jJAYgBAZgBMbgBF8gBD9gBA-gBAfgBAogCAagCA7gCqpqimAbAAgHSAiQ3ODMzYWYyZC01N2E0LTQ2YmEtOWNmYy0yNjYwMjhmNDE4ZTnYAgTgAgE&sid=9b41df95f3c7ee83d4fe37873ebca795&aid=356980&ucfs=1&arphpl=1&checkin=2022-11-13&checkout=2022-11-14&dest_id=2096&dest_type=district&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=5&hapos=5&sr_order=popularity&srpvid=d4601285d8590018&srepoch=1661740685&all_sr_blocks=517400501_354375041_0_1_0&highlighted_blocks=517400501_354375041_0_1_0&matching_block_id=517400501_354375041_0_1_0&sr_pri_blocks=517400501_354375041_0_1_0__93372700&from_sustainable_property_sr=1&from=searchresults#hotelTmpl
