--- a/docs/posts/2022-09-15-bintan.md
+++ b/docs/posts/2022-09-15-bintan.md
@@ -10,45 +10,45 @@ Tanjung Pinang appears to be the main town, but it is about 1.5 hours away from 
 
 Western Indonesian Time (WIB): UTC+07:00 (1 hour behind Singapore)
 
-[Ferry ticket confirmation](../static/2022-09-15/ferry.pdf)
-
 **23 Oct, Sun**
 
 -   0740 SGT: Reach Tanah Merah Ferry Terminal
--   0910 SGT: Ferry departs
+-   0910 SGT: Ferry departs - [Ferry ticket confirmation](../static/2022-09-15/ferry.pdf)
 -   0920 WIB: Arrive [Bandar Bentan Telani Ferry Terminal][bbt-ferry]
 -   Pickup to [TRC Bintan Resort][trc-bintan-resort]
--   Explore beach, read, mangrove tour, kayaking, cycling etc
--   Dinner at hotel
+-   Explore beach, read and cycled around the area
+-   Dinner at hotel. The butter chicken was the highlight.
 
 **24 Oct, Mon**
 
--   Breakfast at hotel/muesli
--   Lunch: KIV at nearby market, buy back food for dinner BBQ
--   Dinner: BBQ (SGD $28 for the fuel/utensils, excluding food)
+-   Breakfast and lunch at hotel
+-   We took pictures at the treehouse and explored the endlessly shallow beach at low tide.
+-   Cycled and walked to a mart to buy snacks and had noodles at a roadside shop
 
 **25 Oct, Tue**
 
 -   Breakfast at hotel
--   Lunch: Hotel or nearby restaurant
+-   Attempted to kayak to an island at high tide in the morning
+-   Had lunch at a seafood restaurant at Chanel's insistence.
 -   1435 WIB: Reach [Bandar Bentan Telani Ferry Terminal][bbt-ferry]
 -   1605 WIB: Ferry departs for Singapore
--   1815 SGT: Arrive at Singapore, KIV dinner
+-   1815 SGT: Arrive at Singapore
 
-## Packing List
+## Misc
+
+### Packing List
 
 -   Mosquito repellent
 -   Sunscreen
 -   Passport
--   KIV change some IDR
 -   Swimwear
 -   Beach slippers
 -   Kindle
 -   Fruits/muesli/Maggi noodles
 
-## Bintan Ferry Info
+### Bintan Ferry Info
 
-**[Timings][ferry-timings]**
+[Timings][ferry-timings]
 
 To Bintan:
 
@@ -62,7 +62,7 @@ From Bintan:
 
 The round trip ferry cost is $95. We do not need a [visa][visa].
 
-## Cost of the trip
+### Total Cost
 
 -   Ferry: $100 return per person
 -   Accomodation: $89 for 2 nights
@@ -71,7 +71,7 @@ The round trip ferry cost is $95. We do not need a [visa][visa].
 
 Total cost per person: $100 + $(89 + 55 + 97)/2 = **$220.50**
 
-## Learning Points
+### Learning Points
 
 -   Beach quality wasn't so good - it was in a mangrove (though it extended very far out to sea). There was also some oil pollution. For a better, resort-style beach option, a resort facing the east side of Bintan (away from the ferry terminal, and toward the South China Sea) such as [this][ten-rooms], might be a better option.
 
