Update github workflow Add vietnam trip photos/videos to blog post

--- a/docs/posts/2022-08-22-vietnam.md
+++ b/docs/posts/2022-08-22-vietnam.md
@@ -1,6 +1,8 @@
 # Vietnam 13-19 Nov 2022
 
-![](/static/2022-08-22/hang-tien.jpg)
+![](/static/2022-08-22/hang-mua.jpg)
+
+View photos [here][photos].
 
 ## Itinerary
 
@@ -16,14 +18,21 @@
 
 **14 Nov, Mon**
 
+![](/static/2022-08-22/phong-nha-cave.jpg)
+
 -   Breakfast at Hotel
 -   We cycled to the town area and got on a boat tour to Phong Nha Cave [(other options)][phong-nha-things-todo]
 -   We were sold VIP overnight bus ticket on our way to [Central Backpackers Hostel][central-backpackers-hostel] to pay for the original bus booked.
 -   Deliberated and walked many rounds before settling on a automatic motorbike.
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IJUjvE9jRnk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 -   Rode along the river and countryside before doing a quick tour of the Phong Nha Botanic gardens.
 -   Overnight at [Son River Homestay][son-river-homestay]
 
 **15 Nov, Tue**
+
+![](/static/2022-08-22/hang-tien.jpg)
 
 -   0700 [HT1 Hang Tien Discovery][ht1]
 -   2000 Returned the key to the homestay and had a rushed dinner at the vegan restaurant during a heavy downpour.
@@ -33,7 +42,13 @@
 **16 Nov, Wed**
 
 -   0400 Arrive Ninh Bin
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ukU2m01xFyk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 -   Rented another motorbike to explore Bai Dinh Pagoda and climb [Hang Mua Peak][hang-mua] for a sunset view of Tam Coc valley
+
+![](/static/2022-08-22/hang-mua-sunset.jpg)
+
 -   Overnight at Tam Coc Condeluz Boutique hotel
 
 **17 Nov, Thu**
@@ -42,6 +57,9 @@
 -   Transported to Tuan Chua harbour for the Halong Bay Cruise
 -   Lunch on cruise
 -   Kayaked at halong bay and was late for the sunset such that the cruise had departed and the small boat was looking for us
+
+![](/static/2022-08-22/halong-bay.jpg)
+
 -   Overnight in cruise
 
 **18 Nov, Fri**
@@ -144,3 +162,4 @@ Approximate total cost per person: SGD 1847.15/2 = SGD 923.58
 [phong-nha-things-todo]: https://vietnam.travel/things-to-do/complete-guide-phong-nha
 [sg-to-hanoi]: ../static/2022-08-22/sg-to-hanoi.pdf
 [hanoi-to-dong-hoi]: ../static/2022-08-22/hanoi-to-dong-hoi.pdf
+[photos]: https://photos.nicholaslyz.com/s/3t9dvzhxad/2022-vietnam
