Added expenses and photos

--- a/docs/trips/2022-08-22-vietnam.md
+++ b/docs/trips/2022-08-22-vietnam.md
@@ -109,7 +109,7 @@ View photos [here][photos].
 
 [Guide][phong-nha-travel] for getting to Phong Nha.
 
-### Total Costs
+### Total Cost
 
 -   Accommodation, Food & Domestic Transport: SGD 1051.44
 -   International Flight by Scoot: SGD 455.9
