major: move to new blog layout
added glightbox plugin: autozoom for images, no need to wrap with <a> tags

Update devcontainer

--- a/docs/blog/posts/2023-02-19-teas.md
+++ b/docs/blog/posts/2023-02-19-teas.md
@@ -1,9 +1,15 @@
+---
+date: 2023-02-19
+---
+
 # Teas
 
 This post briefly summarizes the various types of teas (traditional and herbal/flower) and our experiences with them.
 
-![Alt text](../static/2023-02-19/tea1.jpg)
-![Alt text](../static/2023-02-19/tea2.jpg)
+<!-- more -->
+
+![Alt text](../../static/2023-02-19/tea1.jpg)
+![Alt text](../../static/2023-02-19/tea2.jpg)
 
 ## Teas with caffeine
 
