--- a/docs/trips/2022-08-22-vietnam.md
+++ b/docs/trips/2022-08-22-vietnam.md
@@ -1,8 +1,18 @@
+---
+date: 2022-08-22
+categories:
+    - Trips
+---
+
 # Vietnam 13-19 Nov 2022
 
-![](/static/2022-08-22/hang-mua.jpg)
+Ninh Bin, motorbiking, caving and a cruise.
+
+![](../static/2022-08-22/hang-mua.jpg)
 
 View photos [here][photos].
+
+<!-- more -->
 
 ## Itinerary
 
@@ -18,7 +28,7 @@ View photos [here][photos].
 
 **14 Nov, Mon**
 
-![](/static/2022-08-22/phong-nha-cave.jpg)
+![](../static/2022-08-22/phong-nha-cave.jpg)
 
 -   Breakfast at Hotel
 -   We cycled to the town area and got on a boat tour to Phong Nha Cave [(other options)][phong-nha-things-todo]
@@ -32,7 +42,7 @@ View photos [here][photos].
 
 **15 Nov, Tue**
 
-![](/static/2022-08-22/hang-tien.jpg)
+![](../static/2022-08-22/hang-tien.jpg)
 
 -   0700 [HT1 Hang Tien Discovery][ht1]
 -   2000 Returned the key to the homestay and had a rushed dinner at the vegan restaurant during a heavy downpour.
@@ -47,7 +57,7 @@ View photos [here][photos].
 
 -   Rented another motorbike to explore Bai Dinh Pagoda and climb [Hang Mua Peak][hang-mua] for a sunset view of Tam Coc valley
 
-![](/static/2022-08-22/hang-mua-sunset.jpg)
+![](../static/2022-08-22/hang-mua-sunset.jpg)
 
 -   Overnight at Tam Coc Condeluz Boutique hotel
 
@@ -58,7 +68,7 @@ View photos [here][photos].
 -   Lunch on cruise
 -   Kayaked at halong bay and was late for the sunset such that the cruise had departed and the small boat was looking for us
 
-![](/static/2022-08-22/halong-bay.jpg)
+![](../static/2022-08-22/halong-bay.jpg)
 
 -   Overnight in cruise
 
