--- a/docs/trips/2022-09-15-bintan.md
+++ b/docs/trips/2022-09-15-bintan.md
@@ -1,6 +1,16 @@
+---
+date: 2022-09-15
+categories:
+    - Trips
+---
+
 # Bintan Trip 23-25 Oct 2022
 
-![](/static/2022-09-15/bintan.jpg)
+A chill trip by the beach.
+
+![](../static/2022-09-15/bintan.jpg)
+
+<!-- more -->
 
 Main idea is to chill and recuperate from city life by the beach.
 
