add cookware article

--- a/docs/blog/posts/2024-10-13-factorio.md
+++ b/docs/blog/posts/2024-10-13-factorio.md
@@ -8,6 +8,8 @@ categories:
 
 Factorio is a fun factory building game, and here are some things we've discovered.
 
+<!-- more -->
+
 -   [Guide to Belt Balancers]
 
 [Guide to Belt Balancers]: <../../static/blog/2024-10-13/Factorio Belt Balancers v1.0.pdf>
