add sofa article

--- a/docs/blog/posts/2024-12-29-mattress.md
+++ b/docs/blog/posts/2024-12-29-mattress.md
@@ -4,25 +4,11 @@ categories:
     - House
 ---
 
-# House
-
-Components of our house and our decision process for each.
-
-Organized by room.
-
-<!-- more -->
-
-## Master Bedroom
-
-### Lighting & Color Scheme
-
-TBD
-
-Reddit [resource](https://old.reddit.com/r/DesignMyRoom/comments/16lfiz9/long_bedroom_with_dark_floors_how_can_i_make_it/), [another one](https://aestheticbedrooms.com/dark-wood-floor-bedroom/).
-
-### Mattress
+# Mattress
 
 We have decided on full latex, King size (180cm x 190cm), and at least 8" (20cm) thick.
+
+<!-- more -->
 
 ??? info "Rationale"
 
@@ -90,11 +76,6 @@ Layer breakdown (from top to bottom):
 -   Middle layer: TBD
 -   Support layer: TBD
 
-### Mattress Cover
-
-### Blanket
-
-### Bedframe
 
 [DIY our own]: https://reddit.com/r/MattressMod/comments/1ccvych/an_updated_guide_to_mattress_diy/
 [Lien'A]: https://www.liena.vn/
