fix broken links

--- a/docs/blog/posts/2023-11-04-3d-printing.md
+++ b/docs/blog/posts/2023-11-04-3d-printing.md
@@ -40,7 +40,7 @@ We went to this class at Woodlands Public Library on 2023-11-04 to get certifica
 - [myminifactory.com] - lets creators sell their 3D designs online
 - [yeggi.com] - another repository
 
-[thingiverse.com]: http://www.thingiverse.com/
+[thingiverse.com]: https://www.thingiverse.com/
 [printables.com]: http://www.printables.com/
 [thangs.com]: https://www.thangs.com/
 [myminifactory.com]: https://www.myminifactory.com/
